# reversed-matrix-vectorization

./: CMakeLists.txt  auto.h  blas.h  default.h  full.cpp  main.cpp  shared.h  simd.h
